# Agent-Axios

./: .gitignore  IMPLEMENTATION-SUMMARY.md  QUICK-START.md  README.md  UI-EXAMPLES.md
AI-CodeEditor/: SecureFix_IDE_Phase2_Implementation_Plan.md
AI-CodeEditor/securefix-ide/: AI-FIX-FEATURE.md  FINAL-STATUS.md  FLOW-DIAGRAM.md  README.md  TEST-FIX-API.md  package-lock.json  package.json
AI-CodeEditor/securefix-ide/backend/: .env.example  =2.0.36  README.md  main.py  requirements.txt
AI-CodeEditor/securefix-ide/core/: package.json
AI-CodeEditor/securefix-ide/desktop/: README.md  package.json  (+5 more)
AI-CodeEditor/securefix-ide/desktop/src-tauri/: Cargo.toml  tauri.conf.json
AI-CodeEditor/securefix-ide/desktop/src-tauri/capabilities/: default.json
AI-CodeEditor/securefix-ide/desktop/src-tauri/icons/: .gitkeep  icon.icns
AI-CodeEditor/securefix-ide/desktop/src-tauri/src/: commands.rs  main.rs
Agent-Axios/: BACKEND_ANALYSIS.md  NODE_BACKEND_IMPLEMENTATION_PLAN.md  PERFORMANCE_IMPROVEMENTS.md  QUICK_START_CACHING.md  README.md  backend_guide.md  main.py  monitor_analysis.py  package-lock.json  requirements.txt  setup_react_agent.sh
Agent-Axios/agent-axios-backend/: init_db.py  monitor_analysis.py  requirements.txt  run.py
Agent-Axios/agent-axios-frontend/: APP_README.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
Agent-Axios/agent-axios-node-backend/: .env.example  IMPLEMENTATION_STATUS.md  package-lock.json  package.json  test-api.js  test-comprehensive.js  test-vulnerability-analysis.js
reports/reports/: analysis_5_report.txt
(+187 files in other folders)
